examples/errors/music/unexpected_char.abc
X:1
T:Unexpected Character
K:C
% L001: Invalid characters
C@D#E$F|
